about container position and overflow fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -64,10 +64,16 @@ a {
     color: inherit;
 }
 
+p {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    line-height: 1.4em;
+    font-size: 1.2em;
+}
 
 //      Body        \\
 .page {
-    padding-top: 5em;
+    margin-top: 80px;
     background: black;
     color: white;
 }
@@ -78,6 +84,7 @@ a {
 
 .container {
     padding: 20px;
+    padding-top: 80px;
     max-width: 95vw;
     margin: 0 auto;
 }
@@ -157,30 +164,30 @@ header li {
 
 //      About       \\
 .about {
-    height: 500px;
+    // height: 500px;
     color: white;
-    padding: 20px 10px;
     position: relative;
 
-    // background: url('https://besthqwallpapers.com/Uploads/8-4-2019/86567/thumb2-liteshow-close-up-fortnite-battle-royale-ninja-2019-games.jpg');
-    // background: url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
+    background: url('https://besthqwallpapers.com/Uploads/8-4-2019/86567/thumb2-liteshow-close-up-fortnite-battle-royale-ninja-2019-games.jpg');
+    background: url('https://miro.medium.com/max/4000/1*mWWz_fABgRc-W2s4VHF6PQ.gif');
     background-size: cover;
     background-position: center 40px;
     background-attachment: fixed;
     @include aspect-ratio(560, 933);
+    overflow: scroll;
 
     .aboutText {
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
-        width: 77vw;
-        height: 80%;
-        margin: auto;
+        max-width: 70vw;
+        // height: 100%;
+        margin: 0 auto;
         font-size: 1.2em;
 
         position: absolute;
-        top: 2em;
+        top: 4em;
         left: 0;
         right: 0;
     }
